# Genome-Firewall

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  Makefile  README.md  app.py  asgi.py  pyproject.toml  requirements.txt  vercel.json
assets/: styles.css
config/: drug_catalog.yaml  release_evaluation.example.json
docs/: DATA_CONTRACT.md  DEMO_SCRIPT.md  MODEL_CARD.md  SAFETY.md
scripts/: predict.py  train.py
src/genome_firewall/: __init__.py  amrfinder.py  decision.py  demo.py  evaluation.py  explanations.py  fasta.py  predictor.py  release.py  schemas.py  service.py  targets.py  training.py
tests/: test_core.py  test_deployment.py  test_integration.py  test_release.py
