[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genome-firewall"
version = "0.1.0"
description = "A selective, safety-gated antimicrobial resistance research prototype."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Genome Firewall Hackathon Team" }]
keywords = ["antimicrobial-resistance", "genomics", "machine-learning", "streamlit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "joblib>=1.4,<2",
  "numpy>=1.26,<3",
  "openai>=1.68,<3",
  "pandas>=2.2,<4",
  "plotly>=5.24,<7",
  "pydantic>=2.8,<3",
  "python-dotenv>=1.0,<2",
  "PyYAML>=6.0,<7",
  "scikit-learn>=1.5,<2",
  "streamlit>=1.40,<1.57",
]

[project.optional-dependencies]
parquet = [
  "pyarrow>=17,<24",
]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["genome_firewall*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["genome_firewall"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
